--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "@/constants/*": ["constants/*"],
       "@/lib/*": ["lib/*"],
       "@/utils/*": ["utils/*"],
-      "@/public/*": ["../public/*"]
+      "@/public/*": ["../public/*"],
+      "@/globalStates/*": ["globalStates/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
